<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">vhome</string>
    <string name="senderID">80369243567</string>

    <string name="title_section1">Login</string>
    <string name="title_section2">My cameras</string>
    <string name="title_section3">Shared cameras</string>
    <string name="title_section4">Video archive</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="exitQuestion">Quit?</string>
    <string name="exitOk">Ok</string>
    <string name="exitCancel">Cancel</string>

    <string name="no_connected_vcam">No connected cameras</string>
    <string name="no_records">Empty</string>
    <string name="enter_email">EMail</string>
    <string name="enter_password">Password</string>
    <string name="enter">Enter</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Nav Drawer Menu Items -->
    <string name="my_cameras">My cameras</string>
    <string name="shared_cameras">Shared cameras</string>
    <string name="my_alerts">My alerts</string>
    <string name="shared_alerts">Shared alerts</string>
    <string name="add_camera">Add camera</string>
    <string name="exit">Quit</string>

    <string-array name="nav_drawer_items">
        <item>@string/my_cameras</item>
        <item>@string/shared_cameras</item>
        <item>@string/my_alerts</item>
        <item>@string/shared_alerts</item>
        <item>@string/add_camera</item>
        <item>@string/exit</item>
    </string-array>

    <string name="title_activity_motion_detect">Motion Detect</string>
    <string name="title_activity_touch_image_view">TouchImageViewActivity</string>
    <string name="title_activity_mdfullscreen">MDFullscreenActivity</string>
    <string name="title_activity_pinch">PinchActivity</string>
    <string name="title_activity_varch_player">VarchPlayerActivity</string>
    <string name="title_activity_vcam_setup">VcamSetup</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_share">ShareActivity</string>

    <string name="videoarchive">Videoarchive</string>
    <string name="cam_name">Camera name</string>
    <string name="not_available">Not available</string>
    <string name="date">Date</string>
    <string name="not_specified">Not specified</string>
    <string name="find_in_archive">Find in archive</string>
    <string name="Connecting_server">Connecting to the server</string>
    <string name="wait">Wait</string>
    <string name="from_app_only">Video is only available from within the app</string>

    <string name="noNetwork">No Internet Connection</string>
    <string name="manufacturer">Производитель</string>
    <string name="model">Модель</string>
    <string name="record_schedule">Расписание записи</string>

    <string name="access_level_online">ONLINE</string>
    <string name="access_level_archive">ARCHIVE</string>
    <string name="access_level_alerts">ALERTS</string>
    <string name="access_level_online_alerts">ONLINE + ALERTS</string>

    <string name="vcam_dns">DNS</string>
    <string name="vcam_ip">IP Address</string>
    <string name="protocol">Protocol</string>
    <string name="vcam_port">Streaming Port</string>
    <string name="setup_port">Management Port</string>
    <string name="vcam_login_name">Camera Login name</string>
    <string name="vcam_password">Camera Password</string>
    <string name="vcam_location">Camera Location</string>
    <string name="vcam_name">Camera name</string>
    <string name="vcam_title">Camera Title</string>
    <string name="record_duration">Video fragment duration</string>
    <string name="alerts">Alerts</string>

    <string name="shared_access">Shared Access</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>

    <string name="all_working_days">All working days</string>
    <string name="weekend">All weekend</string>
    <string name="vcam_timetable">TIMETABLE FOR THE CAMERA</string>
    <string name="password">Password</string>

    <string name="name">Name</string>
    <string name="surename">Surname</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street_house">Street, house</string>
    <string name="phone">Phone</string>
    <string name="already_in_use">Такой п/я уже используется!</string>
    <string name="vcjjc">РАССПИСАНИЕ ЗАПИСИ</string>
    <string name="vcam_delete">Удаление камеры</string>
    <string name="delete_vcam_question">Удалить видеокамеру?</string>

    <string-array name="access_level_items">
        <item>@string/access_level_online</item>
        <item>@string/access_level_archive</item>
        <item>@string/access_level_alerts</item>
        <item>@string/access_level_online_alerts</item>
    </string-array>
</resources>
