<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="ua.com.vi_port.vhome.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="21pt"
        android:background="#EFEFF4" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:paddingLeft="15pt"
        android:hint="@string/enter_email"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingLeft="15pt"
        android:id="@+id/etPass1"
        android:textColor="#000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="21pt"
        android:background="#EFEFF4"
        android:text="ПЕРСОНАЛЬНЫЕ ДАННЫЕ"
        android:paddingLeft="15pt"
        android:gravity="center_vertical"
        android:textColor="#6d6d72"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="text"
        android:hint="@string/name"
        android:paddingLeft="15pt"
        android:id="@+id/etName"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="text"
        android:hint="@string/surename"
        android:paddingLeft="15pt"
        android:id="@+id/etSurename"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="text"
        android:hint="@string/country"
        android:paddingLeft="15pt"
        android:id="@+id/etCountry"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="text"
        android:hint="@string/city"
        android:paddingLeft="15pt"
        android:id="@+id/etCity"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="text"
        android:hint="@string/street_house"
        android:paddingLeft="15pt"
        android:id="@+id/etStreetHouse"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:inputType="text"
        android:hint="@string/phone"
        android:paddingLeft="15pt"
        android:id="@+id/etPhone"
        android:textColor="#000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:textColor="#0076FF"
        android:id="@+id/btRegistration"
        android:paddingLeft="15pt"
        android:gravity="center_vertical" />

</LinearLayout>
