<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ua.kiev.vignatyev.vhome.LoginFragment"
    android:background="#B93747">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/cbSavePassword"
        android:layout_centerHorizontal="true"
        android:src="@drawable/vi_port_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/cbSavePassword"
        android:layout_toEndOf="@+id/btnLogin"
        android:visibility="gone" />

    <EditText
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:hint="@string/enter_email"
        android:textColorHint="#90FFFFFF"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text"
        android:paddingLeft="15dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="vignatyev@list.ru"
        android:singleLine="true"
        android:selectAllOnFocus="true" />


    <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/enter"
            android:textColor="@drawable/button_text_color"
            android:id="@+id/btnLogin"
            android:clickable="true"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:textSize="17dp"
            android:layout_alignTop="@+id/btnRegisterRecovery"
            android:layout_alignStart="@+id/etPassword" />
        <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/registration"
            android:textColor="@drawable/button_text_color"
            android:id="@+id/btnRegisterRecovery"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:textSize="17dp"
            android:layout_below="@+id/etPassword"
            android:layout_alignEnd="@+id/etPassword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Запомнить пароль"
        android:id="@+id/cbSavePassword"
        android:checked="true"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/password_recovery"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="BETA version"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <EditText
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/enter_password"
        android:textColorHint="#90FFFFFF"
        android:layout_marginTop="21dp"
        android:background="@drawable/edit_text"
        android:enabled="true"
        android:paddingLeft="15dp"
        android:textColor="#FFFFFF"
        android:text="123456"
        android:layout_below="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:singleLine="true"
        android:selectAllOnFocus="true" />


</RelativeLayout>
