<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.com.vi_port.vhome.ShareVcamUserFragment"
    android:background="#FFFFFF"
    android:clickable="true">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/shared_access"
        android:id="@+id/tvGeneralAccess"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#EFEFF4"
        android:textColor="#6D6D72"
        android:textSize="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:text="user@domain.com"
        android:id="@+id/tvOwnerEmail"
        android:layout_below="@+id/tvGeneralAccess"
        android:layout_alignParentStart="true"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:text="Владелец"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/tvOwnerEmail"
        android:layout_alignParentEnd="true"
        android:paddingRight="15dp"
        android:gravity="center_vertical"
        android:textColor="#6D6D72"
        android:textSize="17dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvOwnerEmail"
        android:layout_above="@+id/linearLayout2">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvSharedUsers"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/linearLayout3"
            android:layout_below="@+id/linearLayout2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#EFEFF4"
        android:baselineAligned="true"
        android:id="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout3">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:id="@+id/btCancel"
            android:layout_weight="1"
            android:textColor="#0076FF"
            android:background="#FFFFFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:id="@+id/btAddShareUser"
            android:layout_weight="1"
            android:textColor="#0076FF"
            android:background="#FFFFFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:id="@+id/btSaveShareUser"
            android:layout_weight="1"
            android:textColor="#0076FF"
            android:background="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>
